update Camera + fix tests +final commit stage 6